--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-# Mongo DB URL
+# Mongo DB URL. The `mongosh` command outputs this, or you could run the following cmd from bash:
+#   mongosh --eval "db.getMongo()"
 MONGO_URL=XXX
